Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8886

"Emulation subsystem breakpoint" issue keeps coming up when using cdb

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 2.7.0
    • Qt Creator 2.7.0-beta
    • Debugger
    • None
    • Windows 8 (64 Bit), msvc2012, cdb
    • fda503748d0ac21338e280ced1dca096d94f6899

      When using Creator on Windows 8 (64 Bit) an issue comes up sometimes when the user starts debugging using cdb.

      It says something along these lines:
      error: Exception at 0x771d054d, code: 0x4000001f: Win32 x86 emulation subsystem breakpoint hit, flags=0x0 (first chance)

      Even though it seems not to have any influence on debugging or the program itself it may confuse the user.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            owolff Oliver Wolff
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes