Debugger: CDB: Don't add a task for the wow64 exception.

Task-number: QTCREATORBUG-8886

Change-Id: Idf08562c58e1f02b09ef6ff7a9fb899f1516f9ae
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>